# huecaya

./: .gitattributes  .gitignore  LICENSE  README.md
api/: Dockerfile  Makefile  README.md  pyproject.toml
api/de_identification_api/data/: loaders.py
api/de_identification_api/domain/: domain_model.py  inference.py
api/de_identification_api/presentation/: endpoints.py
api/resources/: parameters.json
datalake/: .gitignore  Makefile
datalake/experiments/falcon-instruct/one-shot-english/: prompt_template.json
datalake/experiments/falcon/one-shot-english/: prompt_template.json
datalake/experiments/falcon/prompt-ner-english/: prompt_template.json
datalake/experiments/falcon/zero-shot-english/: prompt_template.json
datalake/experiments/llama2/3-few-shot-english/: prompt_template.json
datalake/experiments/llama2/3-few-shot-german/: prompt_template.json
datalake/experiments/llama2/3-few-shot-german-with-context/: prompt_template.json
datalake/experiments/llama2/prompt-ner-german/: prompt_template.json
datalake/experiments/llama2/zero-shot-german-with-context/: parameters.json  prompt_template.json
datalake/experiments/mistral-instruct/3-few-shot-english-with-context-instruct/: parameters.json  prompt_template.json
datalake/experiments/mistral-instruct/one-shot-english-instruct/: prompt_template.json
experimentation/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
experimentation-tracking/: .gitignore  Makefile  pyproject.toml
experimentation/experimentation/: __init__.py
experimentation/experimentation/data/: logging_client.py  parameters.py  prompts.py  results_persistence.py
experimentation/experimentation/domain/: domain_model.py  evaluation.py  experiment_service.py  inference_model.py  prompt_service.py
experimentation/experimentation/presentation/: cli.py
experimentation/tests/integration/presentation/: test_cli.py
experimentation/tests/integration/resources/: test.csv
experimentation/tests/integration/resources/simple-experiment/: parameters.json  prompt_template.json
experimentation/tests/unit/data/: test_prompts.py
experimentation/tests/unit/domain/: test_evaluation.py  test_experiment_service.py  test_prompt_service.py
experimentation/tests/unit/resources/complex-experiment/: prompt_template.json
experimentation/tests/unit/resources/simple-experiment/: parameters.json  prompt_template.json
notebooks/: .gitignore  Makefile  eda.ipynb  pyproject.toml
(+7 files in other folders)
