[tool.poetry]
name = "de_identification_api"
version = "0.1.0"
description = "API for de-identification"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
flask = "^3.0.1"
gunicorn = "^21.2.0"
langchain = "^0.1.11"
transformers = "^4.37.1"
llama-cpp-python = "^0.2.33"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.3"
ruff = "^0.1.9"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
