[tool.poetry]
name = "experimentation_tracking"
version = "0.1.0"
description = "MLflow instance for tracking the experiments"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
mlflow = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
