[tool.poetry]
name = "experimentation"
version = "0.1.0"
description = "Service for running experiments with LLMs"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.9"
click = "^8.1.7"
langchain = "^0.1.4"
mlflow = "^2.10.0"
sentencepiece = "^0.1.99"
transformers = "^4.37.1"
llama-cpp-python = "^0.2.33"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.0"
pytest-mock = "^3.11.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
