[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Notebooks for adhoc data analysis"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.9"
notebook = "^7.0.7"
seaborn = "^0.13.2"
numpy = "^1.26.3"
pandas = "^2.2.0"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
